--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,3 +14,9 @@ dev_dependencies:
   lints: ^1.0.0
 dependencies: 
   meta: ^1.8.0
+  http: ^0.13.4
+  dio: ^4.0.6
+  english_words: ^4.0.0
+
+
+  
